--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: php
 php:
+  - "7.2"
+  - "7.1"
+  - "7.0"
   - "5.6"
   - "5.5"
   - "5.4"
@@ -10,4 +13,4 @@ env:
   - DOKUWIKI=old-stable
 before_install: wget https://raw.github.com/splitbrain/dokuwiki-travis/master/travis.sh
 install: sh travis.sh
-script: cd _test && phpunit --stderr --group plugin_icons
+script: cd _test && phpunit --bootstrap ../../../../_test/bootstrap.php --stderr --group plugin_icons
